zeit.content.article changes
============================

3.3.2 (unreleased)
------------------

- Reactivate breaking news feature; add max length to title field (VIV-25).

- Add block for referencing an external Liveblog (WEB-246).

- Rewrite filenames to match the SEO expectations while typing (VIV-338).

- Register and cleanup keydown event handlers properly (VIV-381).


3.3.1 (2014-05-13)
------------------

- Disable breaking news feature for the time being.


3.3.0 (2014-05-09)
------------------

- Add separate form for breaking news that only requires minimal input and
  publishes automatically (VIV-367).

- Add "SEO optimized" workflow checkbox (VIV-329).

- Remove unicode line breaks when pasting (WEB-299).


3.2.1 (2014-04-28)
------------------

- Fix breaking editor on wysiwyg save after autosave.


3.2.0 (2014-04-22)
------------------

- Reload only those body blocks that were edited, not the whole body area
  (VIV-11795).

- Display Google news keyword suggestions (VIV-359).


3.1.5 (2014-03-14)
------------------

- Fix incomplete API change to using references as Article.main_image
  (VIV-305).


3.1.4 (2014-03-10)
------------------

- Position cursor at the click position when entering editable mode
  (VIV-11795).

- Make alt/title overridable in main article image too, not only in image
  blocks in the body (VIV-305).


3.1.3 (2014-02-18)
------------------

- Always generate block UUIDs on checkout (even when they might not be needed),
  since relying on a browser request to trigger this is too fragile (FRIED-23).


3.1.2 (2014-02-10)
------------------

- Use Fanstatic instead of zc.resourcelibrary (VIV-296).


3.1.1 (2014-01-20)
------------------

- Display "Deeplink URL" field (VIV-270).

- Implement EditableBody.values() so that it works without UUID attributes,
  this alleviates concurrency problems noted in zeit.frontend (FRIED-23).


3.1.0 (2014-01-07)
------------------
