@@ -17,6 +17,4 @@ class ArticleWorkflowForm(zeit.workflow.browser.form.ContentWorkflow):
         zeit.workflow.browser.form.ContentWorkflow.form_fields
         + zope.formlib.form.FormFields(
             zeit.content.article.interfaces.ICDSWorkflow)
-        + zope.formlib.form.FormFields(
-            zeit.push.interfaces.IPushMessages).select('enabled')
     )
