@@ -6,6 +6,8 @@ zeit.content.article changes
 
 - Reactivate breaking news feature; add max length to title field (VIV-25).
 
+- Add social media section (VIV-387 / VIV-396).
+
 - Add block for referencing an external Liveblog (WEB-246).
 
 - Rewrite filenames to match the SEO expectations while typing (VIV-338).
